--- a/Smart_Eats/package.json
+++ b/Smart_Eats/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SmartEats",
+  "name": "Smart_Eats",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
